grilo: Unregister ignored sources

Instead of letting them running and using resources, unregister
the sources that we ignore.

https://bugzilla.gnome.org/show_bug.cgi?id=727838